--- a/lec 1/index.css
+++ b/lec 1/index.css
@@ -58,3 +58,14 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-container {
+    display: flex;
+}
+
+.shimmer-card {
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: gray;
+}
