--- a/lec 1/index.css
+++ b/lec 1/index.css
@@ -61,11 +61,12 @@
 
 .shimmer-container {
     display: flex;
+    flex-wrap:wrap ;
 }
 
 .shimmer-card {
     margin: 20px;
     width: 200px;
     height: 400px;
-    background-color: gray;
+    background-color:#f0f0f0;
 }
