--- a/lec 1/index.css
+++ b/lec 1/index.css
@@ -3,6 +3,8 @@
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
+    background-color: rgb(241, 219, 19);
+    margin: 2px;
 }
 .logo{
     width: 120px;
@@ -39,8 +41,9 @@
     cursor: pointer;
     border: 1px solid black;
 }
-.Search{
-    padding: 10px;
+.search{
+    margin: 2px;
+    padding: 5px;
 }
 .res-logo{
     width: 100%;
@@ -55,8 +58,14 @@
     /* line-height: 1.2; */
 }
 .filter-btn{
-    margin: 10px;
+    margin: 4px;
     cursor: pointer;
+}
+.filter{
+    display: flex;
+}
+.Search{
+    margin-top: 2px;
 }
 
 .shimmer-container {
